Added basic ansible scripts

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,35 +1,33 @@
 [defaults]
-# Collection paths
-collections_paths = ./collections
-
-# Inventory
-inventory = ./inventory
-
-# Roles path (within collection)
-roles_path = ./collections/ansible_collections/local/main/roles
-
-# Host key checking
+# Inventory configuration
+inventory = inventory/hosts.yml
 host_key_checking = False
 
-# Retry files
-retry_files_enabled = False
+# Logging configuration
+log_path = logs/ansible.log
+display_skipped_hosts = False
+display_ok_hosts = True
 
-# Gathering facts
+# Output configuration
+stdout_callback = yaml
+callbacks_enabled = timer, profile_tasks
+bin_ansible_callbacks = True
+
+# Performance tuning
 gathering = smart
 fact_caching = jsonfile
 fact_caching_connection = /tmp/ansible_facts
-fact_caching_timeout = 3600
+fact_caching_timeout = 86400
 
-# Display
-stdout_callback = yaml
-callbacks_enabled = profile_tasks, timer
+# Roles path
+roles_path = collections/ansible_collections/local/main/roles
 
-# Logging
-log_path = ./ansible.log
+# SSH configuration (for remote execution)
+timeout = 30
+connect_timeout = 30
 
 [inventory]
-enable_plugins = host_list, script, auto, yaml, ini, toml
+enable_plugins = host_list, yaml, ini
 
-[ssh_connection]
-pipelining = True
-ssh_args = -o ControlMaster=auto -o ControlPersist=60s
+[privilege_escalation]
+become_ask_pass = False
