--- a/collections/ansible_collections/local/main/roles/postgres_publisher/defaults/main.yml
+++ b/collections/ansible_collections/local/main/roles/postgres_publisher/defaults/main.yml
@@ -9,6 +9,7 @@ postgres_user: ""
 postgres_password: ""
 postgres_database: "monitoring"
 postgres_table: "gas_limit_benchmarks"
+postgres_timeout: 10
 
 # Results directory
 reports_directory: "results"
