--- a/collections/ansible_collections/local/main/roles/benchmark_validator/tasks/main.yml
+++ b/collections/ansible_collections/local/main/roles/benchmark_validator/tasks/main.yml
@@ -355,10 +355,68 @@
   ansible.builtin.debug:
     msg: "✓ Python packages installed via UV {{ '(newly installed)' if pip_install_result.changed else '(already satisfied)' }}"
 
+- name: Check if git-lfs is installed
+  ansible.builtin.command: git lfs version
+  register: git_lfs_version_result
+  changed_when: false
+  failed_when: false
+
+- name: Install git-lfs (Debian/Ubuntu)
+  ansible.builtin.apt:
+    name: git-lfs
+    state: present
+    update_cache: yes
+  become: yes
+  when:
+    - git_lfs_version_result.rc != 0
+    - ansible_os_family == "Debian"
+  register: git_lfs_apt_result
+
+- name: Install git-lfs (RHEL/CentOS/Fedora)
+  ansible.builtin.yum:
+    name: git-lfs
+    state: present
+  become: yes
+  when:
+    - git_lfs_version_result.rc != 0
+    - ansible_os_family == "RedHat"
+  register: git_lfs_yum_result
+
+- name: Initialize git-lfs after installation
+  ansible.builtin.command: git lfs install
+  when: (git_lfs_apt_result is defined and git_lfs_apt_result is changed) or (git_lfs_yum_result is defined and git_lfs_yum_result is changed)
+  changed_when: true
+  register: git_lfs_init_result
+
+- name: Log git-lfs validation result
+  ansible.builtin.debug:
+    msg: "✓ Git LFS {{ 'installed' if (git_lfs_init_result is defined and git_lfs_init_result is changed) else 'validated' }}: {{ git_lfs_version_result.stdout | default('newly installed') }}"
+
 - name: Check if Makefile exists in source directory
   ansible.builtin.stat:
     path: "{{ workspace_root }}/{{ benchmark_source_dir }}/Makefile"
   register: makefile_stat
+
+- name: Check if Nethermind repo already cloned
+  ansible.builtin.stat:
+    path: "{{ workspace_root }}/{{ benchmark_source_dir }}/nethermind"
+  register: nethermind_repo_stat
+  when: makefile_stat.stat.exists
+
+- name: Notify about long-running tools preparation
+  ansible.builtin.debug:
+    msg:
+      - "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+      - "⏳ STARTING TOOLS PREPARATION (first run can take up to 10 minutes)"
+      - "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+      - "{{ '📦 Step 1/3: Cloning Nethermind repo (~1GB) - this takes the longest' if not (nethermind_repo_stat.stat.exists | default(false)) else '✓ Nethermind repo already exists, skipping clone' }}"
+      - "{{ '📦 Step 2/3: Pulling LFS files' if not (nethermind_repo_stat.stat.exists | default(false)) else '✓ LFS files already pulled' }}"
+      - "🔨 Step 3/3: Building Nethermind.Tools.Kute (dotnet restore + compile)"
+      - "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+      - "Please wait..."
+  when:
+    - makefile_stat.stat.exists
+    - dotnet_version is defined
 
 - name: Prepare tools via Makefile (requires dotnet)
   ansible.builtin.command:
@@ -370,6 +428,14 @@
   when:
     - makefile_stat.stat.exists
     - dotnet_version is defined
+
+- name: Show tools preparation summary
+  ansible.builtin.debug:
+    msg: "✓ Tools preparation completed {{ '(new build)' if make_prepare_result.changed else '(already up to date)' }}"
+  when:
+    - makefile_stat.stat.exists
+    - dotnet_version is defined
+    - make_prepare_result is defined
 
 - name: Register validation results
   ansible.builtin.set_fact:
