--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -34,6 +34,10 @@ benchmark_images: {}  # Empty dict means use defaults from images.yaml
 benchmark_results_dir: "results"
 benchmark_reports_dir: "reports"
 
+# Local artifacts directory (where to fetch results from remote hosts)
+# Defaults to project root (inventory directory)
+local_artifacts_dir: "{{ inventory_dir | dirname }}"
+
 # PostgreSQL configuration (optional, used with --tags postgres)
 # These can be set via:
 #   1. Environment variables (DB_HOST, DB_USER, DB_PASSWORD)
