--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -6,8 +6,8 @@ all:
       ansible_user: parithosh
       # Host-specific benchmark configuration (overrides group_vars)
       benchmark_clients:
-        - geth
         - besu
+        - reth
   vars:
     # Directory on remote host for benchmark execution
     workspace_root: /home/parithosh/benchmark/gas-benchmarks-v2
