--- a/inventory/host_vars/localhost.yml
+++ b/inventory/host_vars/localhost.yml
@@ -1,45 +1,21 @@
 ---
-# Benchmark configuration for localhost
-benchmark_clients:
-  - nethermind
-  - geth
-  - reth
+# =============================================================================
+# Localhost Configuration
+# =============================================================================
+# Host-specific overrides for localhost execution.
+# All defaults are inherited from group_vars/all.yml.
+# Only add values here that differ from the defaults.
+# =============================================================================
 
-benchmark_test_paths:
-  - path: "gas-benchmarks/eest_tests"
-    genesis: "zkevmgenesis.json"
+# Example overrides (uncomment to use):
 
-benchmark_runs: 1
-benchmark_warmup_file: ""
-benchmark_filter: ""
-benchmark_restart_before_testing: false
-benchmark_skip_forkchoice: false
-benchmark_opcodes_warmup_count: 1
-benchmark_debug: false
+# Run fewer clients for local testing
+# benchmark_clients:
+#   - nethermind
 
-# Network and snapshot configuration
-benchmark_network: ""
-benchmark_snapshot_root: ""
+# Use specific test filter
+# benchmark_filter: "bn128"
 
-# Docker image configuration
-# "default" means use image from images.yaml, or specify custom image
-# Example override: {"nethermind": "ethpandaops/nethermind:1.25.0"}
-benchmark_images:
-  nethermind: "default"
-  geth: "default"
-  reth: "default"
-  erigon: "default"
-  besu: "default"
-  nimbus: "default"
-  ethrex: "default"
-
-# Results configuration
-benchmark_results_dir: "results"
-
-# PostgreSQL configuration (optional, used with --tags postgres)
-postgres_host: "{{ lookup('env', 'DB_HOST') | default('') }}"
-postgres_user: "{{ lookup('env', 'DB_USER') | default('') }}"
-postgres_password: "{{ lookup('env', 'DB_PASSWORD') | default('') }}"
-postgres_table: "gas_limit_benchmarks"
-postgres_database: "monitoring"
-postgres_port: 5432
+# Override Docker image for testing
+# benchmark_images:
+#   nethermind: "nethermindeth/nethermind:latest"
