--- a/collections/ansible_collections/local/main/playbooks/run_benchmarks.yml
+++ b/collections/ansible_collections/local/main/playbooks/run_benchmarks.yml
@@ -7,6 +7,7 @@
     client_failures: []
     # Note: playbook_start_time is set in first task using lookup('pipe') to avoid cached facts
     local_artifacts_dir: "{{ playbook_dir }}/../../../../../"
+    use_root: "{{ ansible_os_family != 'Darwin' }}"
 
   tasks:
     - name: Record playbook start time and run timestamp
@@ -136,7 +137,7 @@
             - "{{ benchmark_jwt_path | default('/tmp/jwtsecret') }}"
             - /tmp/genesis.json
             - /tmp/chainspec.json
-          become: yes
+          become: "{{ use_root }}"
 
         - name: Clean up overlay mounts
           ansible.builtin.shell: |
